# wendy

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  MONSTERWENDY.md  README.md  SETUP.md  TEST_PR.md  TODO.md  WENDY_CLAUDE.md  deploy.sh  dev-rebuild.sh  pyproject.toml  requirements.txt  setup-secrets.sh
.runtime/: session_id
bot/: __init__.py  __main__.py  claude_cli.py  context_loader.py  conversation.py  deploy_cog.py  fragment_loader.py  message_logger.py  paths.py  state_manager.py  wendy_cog.py  wendy_outbox.py
config/: BD_USAGE.md  agent_claude_md.txt  claude_fragments.json  claude_settings.json  dev_system_prompt_additions.txt  system_prompt.txt
deploy/: .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
orchestrator/: __init__.py  __main__.py  main.py  requirements.txt
proxy/: __init__.py  main.py  requirements.txt
reviews/: codebase_review.md  full_codebase_review.md
scripts/: cleanup_data_volume.py  deploy.sh  game_logs.sh  get_usage.sh  pack-export.sh  pack-import.sh  query_db.py  secrets.py  setup-dev.sh  sync-fragments.sh  webhooks.py
tests/: conftest.py  test_channel_config.py  test_claude_cli.py  test_cli.py  test_config.py  test_context_loader.py  test_conversation.py  test_fragment_loader.py  test_fragments.py  test_journal.py  test_orchestrator.py  test_prompt.py  test_sessions.py  test_state.py  test_state_manager.py  test_thread_support.py  test_wendy_outbox.py
wendy-avatar/: TASKS.md  deploy.sh  index.html
wendy-games/: DEPLOY.md  (+1 more)
(+158 files in other folders)
